[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/dwarf-head-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/dwarf-body-Sheet.png" type="Texture" id=2]
[ext_resource path="res://src/core/StateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/player/dwarf/Dwarf.gd" type="Script" id=4]
[ext_resource path="res://src/player/dwarf/state/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/player/dwarf/state/Jump.gd" type="Script" id=6]
[ext_resource path="res://src/player/dwarf/state/Air.gd" type="Script" id=7]
[ext_resource path="res://src/util/MultiRaycast.tscn" type="PackedScene" id=8]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.9
bounce = 0.15

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance/Head:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "air"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Head:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -11 ), Vector2( 0, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance/Head:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.7, 3.1, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "jump"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Body:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Head:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -9 ), Vector2( 0, -7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance/Head:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.5, 7 )

[node name="Dwarf" type="RigidBody2D" groups=["player"]]
collision_layer = 2
mode = 2
physics_material_override = SubResource( 7 )
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )

[node name="VisualInstance" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="VisualInstance"]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
hframes = 4
vframes = 3

[node name="Head" type="Sprite" parent="VisualInstance"]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2

[node name="CagePosition" type="Position2D" parent="VisualInstance/Head"]
position = Vector2( 0, -9 )

[node name="WallRaycast" parent="VisualInstance" instance=ExtResource( 8 )]
position = Vector2( 0, -10 )

[node name="RayCast2D1" type="RayCast2D" parent="VisualInstance/WallRaycast"]
position = Vector2( 4, -1 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="VisualInstance/WallRaycast"]
position = Vector2( 4, 3 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="RayCast2D3" type="RayCast2D" parent="VisualInstance/WallRaycast"]
position = Vector2( 4, 7 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/air = SubResource( 5 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="GroundMultiRaycast" parent="." instance=ExtResource( 8 )]

[node name="RayCast2D1" type="RayCast2D" parent="GroundMultiRaycast"]
position = Vector2( -5, -2 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="RayCast2D2" type="RayCast2D" parent="GroundMultiRaycast"]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="RayCast2D3" type="RayCast2D" parent="GroundMultiRaycast"]
position = Vector2( 5, -2 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="StateMachine" parent="." instance=ExtResource( 3 )]
initial_state = NodePath("Air")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="MinJumpTime" type="Timer" parent="StateMachine/Jump"]
wait_time = 0.2
one_shot = true

[node name="MaxHoldTime" type="Timer" parent="StateMachine/Jump"]
wait_time = 1.6
one_shot = true

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Delay" type="Timer" parent="StateMachine/Air"]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="StateMachine/Jump/MinJumpTime" to="StateMachine/Jump" method="_on_MinJumpTime_timeout"]
[connection signal="timeout" from="StateMachine/Jump/MaxHoldTime" to="StateMachine/Jump" method="_on_MaxHoldTime_timeout"]
[connection signal="timeout" from="StateMachine/Air/Delay" to="StateMachine/Air" method="_on_Delay_timeout"]
